[dependencies]
chrono = '0.4.31'
colored = '2'
error-stack = '0.4'
fjson = '0.3.1'
ignore = '0.4.21'
json-patch = '1.2.0'
once_cell = '1.18.0'
pythonize = '0.20.0'
regex = '1.10.2'
serde_json = '1.0.108'
serde_yaml = '0.9.31'
sha2 = '0.10.8'
toml = '0.8.8'
toml_edit = '0.21.0'
tracing = '0.1'
valico = '4.0.0'

[dependencies.bitbazaar]
features = ['cli']
version = '0.0.24'

[dependencies.clap]
features = ['derive', 'string']
version = '4.4'

[dependencies.minijinja]
features = ['loader', 'custom_syntax', 'preserve_order', 'json', 'urlencode']
version = '1.0.10'

[dependencies.minijinja-contrib]
features = ['datetime']
version = '1.0.10'

[dependencies.parking_lot]
features = ['nightly', 'deadlock_detection', 'serde']
version = '0.12.1'

[dependencies.pyo3]
features = ['extension-module', 'chrono', 'generate-import-lib']
version = '0.20.0'

[dependencies.serde]
features = ['derive', 'rc']
version = '1.0.193'

[dependencies.strum]
features = ['derive']
version = '0.25'

[dependencies.tokio]
features = ['macros', 'sync', 'signal', 'rt']
version = '1.35'

[lib]
crate-type = ['cdylib']
name = 'zetch'
path = 'src/lib.rs'

[package]
edition = '2021'
license = 'MIT'
name = 'zetch'
publish = false
readme = 'README.md'
version = '0.0.6'

[profile]

[profile.profiler]
debug = true
incremental = true
inherits = 'release'
strip = false

[profile.test]
inherits = 'release'
