[package]
name = "zetch"
version = "0.0.12"
edition = "2021"
readme = "README.md"
license = "MIT"
# This crate should only be released as a python package, so disable any rust side crates publishing:
publish = false

[lib]
name = "zetch"
crate-type = ["cdylib"]
path = "src/lib.rs"

# Add your dependencies here
[dependencies]
colored = '2'
tracing = "0.1"
error-stack = "0.4"
bitbazaar = { version = "0.0.38", features = ["cli", "timing"] }
pyo3 = { version = '0.20.0', features = ['extension-module', 'chrono', 'generate-import-lib'] }
parking_lot = { version = "0.12", features = ['deadlock_detection', 'serde'] }
strum = { version = '0.25', features = ['derive'] }
clap = { version = "4.4", features = ["derive", "string"] }
chrono = '0.4.31'
fjson = '0.3.1'
ignore = '0.4.21'
json-patch = '1.2.0'
once_cell = '1.18.0'
pythonize = '0.20.0'
regex = '1.10.2'
serde_json = '1.0.108'
serde_yaml = '0.9.31'
sha2 = '0.10.8'
tempfile = '3.9.0'
toml = '0.8.8'
toml_edit = '0.21.0'
valico = '4.0.0'
serde = { version = '1.0', features = ['derive', 'rc'] }
tokio = { version = "1.35", features = ['macros', 'sync', 'signal', 'rt'] }
minijinja = { version = '1.0.10', features = [
  'loader',
  'custom_syntax',
  'preserve_order',
  'json',
  'urlencode',
  'debug',
] }
minijinja-contrib = { version = '1.0.10', features = ['datetime'] }

[profile.profiler]
inherits = "release" # Adds on top of the default release profile
incremental = true
debug = true
strip = false

# Modifying the test runtime (from release is just so much faster)
[profile.test]
inherits = "release" # Adds on top of the default release profile
