[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "zetch._rs"

[project]
name = "zetch"
description = "In-place, continuous templater."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Zachary Stucke", email = "zakstucke@gmail.com" }]
requires-python = ">=3.8"
classifiers = [
  'Development Status :: 3 - Alpha',
  'Intended Audience :: Developers',
  'Topic :: Software Development',
  'Typing :: Typed',
  'Operating System :: POSIX :: Linux',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: MacOS',
  'Programming Language :: Python',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Rust',
  'License :: OSI Approved',
]

# Python deps:
dependencies = ["ruamel.yaml>=0.18.0,<=0.19.0"]

[project.urls]
"Sourcecode" = "https://github.com/zakstucke/zetch"
"Documentation" = "https://zakstucke.github.io/zetch"

# Adds the bin entrypoint for the cli command when pip installed:
[project.scripts]
zetch = 'zetch._rs:cli'
